# GenAIBlocker

./: .gitignore
daemon/: CMakeLists.txt  cache.cpp  client.cpp  crypto  crypto.cpp  decrypt.txt  encrypt.txt  main.cpp  network_channel.cpp  network_channel.h  shadow.cpp  socket.cpp
daemon/crypto/: crypto.cpp  crypto.hpp
daemon/files/: encrypt.txt
daemon/files/folder/: stuff2.txt
daemon/fs/: memfs.cpp  memfs.hpp
daemon/include/: daemon.hpp
daemon/runner/: runner.cpp  runner.hpp
